--- a/client/style.less
+++ b/client/style.less
@@ -117,3 +117,20 @@ a {
 #map {
   height: 600px;
 }
+
+
+#new-location {
+  h2 {
+    font-size: 16px;
+  }
+
+  td, th {
+    padding: 3px;
+    white-space: nowrap;
+  }
+
+  th {
+    text-align: right;
+  }
+
+}
