--- a/client/style.less
+++ b/client/style.less
@@ -9,6 +9,14 @@ header {
   background-color: @lightGrey;
   border-bottom: 1px dotted black;
   height: @headerHeight;
+
+  h1, h2 {
+    display: inline;
+  }
+  h2 {
+    font-size: 16px;
+  }
+
 }
 
 #login-info {
